appId: com.webkul.bagisto.mobikul
---
- runFlow:
    when:
      visible:
        text: "^(Allow only while using the app|While using the app|Only this time|Allow)$"
    commands:
      - tapOn:
          text: "^Allow only while using the app$"
          optional: true
          waitToSettleTimeoutMs: 750
      - tapOn:
          text: "^While using the app$"
          optional: true
          waitToSettleTimeoutMs: 750
      - tapOn:
          text: "^Only this time$"
          optional: true
          waitToSettleTimeoutMs: 750
      - tapOn:
          text: "^Allow$"
          optional: true
          waitToSettleTimeoutMs: 750
